--- a/configs/nerf_lego.yaml
+++ b/configs/nerf_lego.yaml
@@ -10,9 +10,9 @@ training:
   lr_scheduler_step_size: 50
   lr_scheduler_gamma: 0.8
 
-  checkpoint_path: ./checkpoints
+  checkpoint_path: ./checkpoints_4_1
   checkpoint_interval: 50
-  resume: True
+  resume: False
 
   render_interval: 10
 
