--- a/configs/nerf_materials.yaml
+++ b/configs/nerf_materials.yaml
@@ -10,11 +10,11 @@ training:
   lr_scheduler_step_size: 50
   lr_scheduler_gamma: 0.8
 
-  checkpoint_path: ./checkpoints
+  checkpoint_path: ./checkpoints_4_1
   checkpoint_interval: 50
-  resume: True
+  resume: False
 
-  render_interval: 10
+  render_interval: 50
 
 data:
   image_size: [128, 128]
